- Bug Fix: Avoid NPE when reading debts accounts for report [#qubIT-Fenix-6052]

12.0.3 (27-11-2024)
- Improvement: Improves DebtAccountReportEntryBean by adding active registrations field [#qubIT-Fenix-6052]

12.0.2 (19-11-2024)
- Improvement: Add unique degree and execution year to existing report [#qubIT-Fenix-6110]

12.0.1 (18-11-2024)
- Bug Fix: Fix calculation of registration tuition including other events for the same degree and execution interval, but excluding standalone and extracurricular tuitions [#qubIT-Fenix-6109]

12.0.0 (25-10-2024)
- New feature: Finantial document series by finantial entity [#qubIT-Fenix-5456]

11.18.1 (14-10-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]

11.18.0 (10-10-2024)
- Refactor: Apply pluggable validation in creation of customers [#qubIT-Fenix-5910]

11.17.8 (30-09-2024)
- Improvement: Add key to registration tuition debt concatenation, to have the degree simple name [#qubIT-Fenix-5846]
- Bug Fix: In calculation for tuition debts using the new registration tuition service, avoid closing debit notes to decrement amounts by product [#qubIT-Fenix-5854]

11.17.7 (24-09-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]

11.17.6 (13-08-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]

11.17.5 (29-07-2024)
- Bug Fix: Consider all registration states when executing the anull debit entries generation rule [#qubIT-Fenix-5538]

11.17.4 (19-07-2024)
- Improvement: Use excess payment settlemnt origin, to get a related treasury event, and use it to print registratrion info [#qubIT-Fenix-5528]

11.17.3 (09-07-2024)
- Bug fix: Fixes Excel upload on Treasury Imports via file [#ISCTE-FENIXEDU-711]

11.17.2 (08-07-2024)
- Bug Fix: Provide the degree associated with academic treasury event, for service requests [#UL-FMH-2278]

11.17.1 (04-07-2024)